# ground_aerial_simulation

./: README.md
aruco_detection/: CMakeLists.txt  package.xml
aruco_detection/config/: config.yaml  params.json
aruco_detection/launch/: aruco_detection.launch
aruco_detection/src/: aruco_detection_node.cpp
constrained_icp/: CMakeLists.txt  package.xml
constrained_icp/src/: constrained_icp_node.cpp
docs/: compile.md
livox_laser_simulation/include/livox_laser_simulation/: livox_points_plugin.h
livox_laser_simulation/launch/: livox_simulation.launch
livox_laser_simulation/rviz/: livox_simulation.rviz
livox_laser_simulation/src/: livox_points_plugin.cpp
offboard_py/: package.xml
offboard_py/scripts/: offb_node.py
scout_gazebo/src/gazebo_terrain_tutorial/launch/: terrain_1.launch
scout_gazebo/src/gazebo_terrain_tutorial/models/aruco/: model.sdf
scout_gazebo/src/scout_gazebo/launch/: ground_aerial_gazebo.launch  scout_gazebo_world.launch  spawn_scout_v2.launch  visual_world.launch
scout_gazebo/src/scout_gazebo/models/aruco/: model.config
scout_gazebo/src/scout_gazebo/models/aruco/materials/scripts/: aruco_marker.material
scout_gazebo/src/scout_gazebo/models/iris/: iris.sdf
scout_gazebo/src/scout_gazebo/urdf/: aruco_board.xacro  base.xacro  lidar.xacro
scout_gazebo/src/scout_gazebo/worlds/: test.world  tree.world
scout_gazebo/src/scout_gazebo_base/: CMakeLists.txt
