<?xml version="1.0"?>
<package format="2">
  <name>aruco_detection</name>
  <version>0.0.0</version>
  <description>The aruco_detection package</description>

  <maintainer email="vulcan@todo.todo">vulcan</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
